<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TOPINFRARED</string>
    <string name="tip_export_data">Exporting data</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_ok">OK</string>
    <string name="app_message">Message</string>
    <string name="temperature_limit_upper">Max</string>
    <string name="temperature_limit_lower">Min</string>
    <string name="color_board">color board</string>
    <string name="app_confirm">Confirm</string>
    <string name="select_monitor_type_step1">1. Select monitoring type</string>
    <string name="select_monitor_type_step2">2. Select the area you want to monitor on the screen.</string>
    <string name="select_monitor_return">Back</string>
    <string name="ui_fill_in_the_complete">Please fill in completely</string>
    <string name="tip_input_format">Irregular input</string>
    <string name="preview_step_1">1. Drag Image</string>
    <string name="preview_step_2">2. Pinch to Zoom</string>
    <string name="target_tips_step_1">1.Tap Observation Type and choose an object to observe.</string>
    <string name="target_tips_step_2">2.Tap Target and choose a target style.</string>
    <string name="target_tips_step_3">3.Move the target or the camera to align the object with the center of the target.</string>
    <string name="target_tips_step_4">4.Observe the object and the number on the target (the distance between the camera and the object). As shown in the picture below, the distance between the camera and the object is 20 meters.</string>
    <string name="device_loading_tip">Loading…</string>
    <string name="temp_report_no_more">All content is displayed</string>
    <string name="temp_text_standard">Standard</string>
    <string name="temp_text_big">Big</string>
    <string name="temp_text_sup_big">Super Big</string>
</resources>